--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8080
 github.client.id=Iv1.3129381aab788a9b
 github.client.secret=6cb4f0f91d9ffd82b6ef508434a4d6358d5e42ac
 github.redirect.uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
