--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,6 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.44</version>
         </dependency>
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>6.1.3</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -75,6 +70,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>5.2.4</version>
+                <configuration>
+                    <url>jdbc:mysql://localhost:3306/community?useUnicode=true&amp;characterEncoding=utf-8</url>
+                    <user>root</user>
+                    <password>root</password>
+                    <driver>com.mysql.jdbc.Driver</driver>
+                </configuration>
             </plugin>
         </plugins>
     </build>
