--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&char
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+mybatis.type-aliases-package=com.klay.community.model
+mybatis.mapperLocations=classpath:mapper/*.xml
