新增上传图片的功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.type-aliases-package=com.klay.community.mapper
 mybatis.mapperLocations=classpath:mapper/*.xml
+
+#单个文件的最大限制
+spring.servlet.multipart.max-file-size=100MB
+#单次上传文件的最大限制
+spring.servlet.multipart.max-request-size=1000MB
