解决多人本地登录和消息推送逻辑等小问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 spring.servlet.multipart.max-file-size=100MB
 #单次上传文件的最大限制
 spring.servlet.multipart.max-request-size=1000MB
+#SDK上传
+aliyun.sdk.public-key=
+aliyun.sdk.private-key=
