--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-ossadmin</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
