--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,11 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 spring.servlet.multipart.max-file-size=100MB
 #单次上传文件的最大限制
 spring.servlet.multipart.max-request-size=1000MB
+#日志
+logging.file.name=community.log
+logging.level.root=info
+logging.file.max-size=10MB
+
 #SDK上传
 aliyun.sdk.public-key=
 aliyun.sdk.private-key=
