sdk接口调试完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ logging.level.root=info
 logging.file.max-size=10MB
 
 #SDKÉÏ´«
-aliyun.sdk.public-key=
-aliyun.sdk.private-key=
+aliyun.sdk.access.key.id=LTAI4FvegE4eKucgXMMJVNmZ
+aliyun.sdk.access.key.secret=ZFZEuTRsdEccH2vzEnehpXnn2xNgK0
