--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,9 @@
             <version>3.9</version>
         </dependency>
         <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-ossadmin</artifactId>
-            <version>2.0.1</version>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.8.0</version>
         </dependency>
     </dependencies>
 
