elasticSearch本地测试完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,11 @@ logging.file.name=community.log
 logging.level.root=info
 logging.file.max-size=10MB
 
-#SDK上传
+#SDK上传，使用RAM子账号
 aliyun.sdk.access.key.id=LTAI4FvegE4eKucgXMMJVNmZ
 aliyun.sdk.access.key.secret=ZFZEuTRsdEccH2vzEnehpXnn2xNgK0
+
+#elasticSearch配置
+spring.elasticsearch.rest.uris =127.0.0.1:9200
+spring.elasticsearch.rest.username=elastic
+spring.elasticsearch.rest.password=elasticroot
