--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,20 +9,20 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.type-aliases-package=com.klay.community.mapper
 mybatis.mapperLocations=classpath:mapper/*.xml
 
-#µ¥¸öÎÄ¼şµÄ×î´óÏŞÖÆ
+#å•ä¸ªæ–‡ä»¶çš„æœ€å¤§é™åˆ¶
 spring.servlet.multipart.max-file-size=100MB
-#µ¥´ÎÉÏ´«ÎÄ¼şµÄ×î´óÏŞÖÆ
+#å•æ¬¡ä¸Šä¼ æ–‡ä»¶çš„æœ€å¤§é™åˆ¶
 spring.servlet.multipart.max-request-size=1000MB
-#ÈÕÖ¾
+#æ—¥å¿—
 logging.file.name=community.log
 logging.level.root=info
 logging.file.max-size=10MB
 
-#SDKÉÏ´«£¬Ê¹ÓÃRAM×ÓÕËºÅ
-aliyun.sdk.access.key.id=LTAI4FvegE4eKucgXMMJVNmZ
-aliyun.sdk.access.key.secret=ZFZEuTRsdEccH2vzEnehpXnn2xNgK0
+#SDKä¸Šä¼ ï¼Œä½¿ç”¨RAMå­è´¦å·
+aliyun.sdk.access.key.id=
+aliyun.sdk.access.key.secret=
 
-#elasticSearchÅäÖÃ
+#elasticSearché…ç½®
 spring.elasticsearch.rest.uris =127.0.0.1:9200
 spring.elasticsearch.rest.username=elastic
 spring.elasticsearch.rest.password=elasticroot
