--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 github.client.id=Iv1.3129381aab788a9b
 github.client.secret=6cb4f0f91d9ffd82b6ef508434a4d6358d5e42ac
 github.redirect.uri=http://localhost:8080/callback
-spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -18,11 +18,11 @@ logging.file.name=community.log
 logging.level.root=info
 logging.file.max-size=10MB
 
-#SDK上传，使用RAM子账号
-aliyun.sdk.access.key.id=LTAI4FvegE4eKucgXMMJVNmZ
-aliyun.sdk.access.key.secret=ZFZEuTRsdEccH2vzEnehpXnn2xNgK0
-
 #elasticSearch配置
-spring.elasticsearch.rest.uris =127.0.0.1:9200
-spring.elasticsearch.rest.username=elastic
-spring.elasticsearch.rest.password=elasticroot
+spring.data.elasticsearch.repositories.enabled=true
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+spring.data.elasticsearch.cluster-name=elasticsearch
+
+
+spring.data.elasticsearch.client.reactive.username=elastic
+spring.data.elasticsearch.client.reactive.password=elasticroot
